--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WE PRO SOLUTION</title>
+    <title>TECHPRO INNOVATION</title>
 
     <link
       rel="stylesheet"
@@ -440,14 +440,14 @@
                   >
                 </li>
                 <li>
-                  Phone:<a href="tel:+923001234567" class="footer-link"
-                    >+92 300 1234567</a
+                  Phone:<a href="tel:+923001234567" class="footer-link">
+                    +92 307 2729835</a
                   >
                 </li>
                 <li>
                   WhatsApp:
                   <a href="https://wa.me/923001234567" class="footer-link"
-                    >+92 300 1234567</a
+                    >+92 307 2729835</a
                   >
                 </li>
               </ul>
@@ -470,7 +470,7 @@
         </div>
 
         <div class="border-top">
-          <p>&copy; 2025 We Pro Solution. All Rights Reserved.</p>
+          <p>&copy; 2026 We Pro Solution. All Rights Reserved.</p>
         </div>
       </div>
 
@@ -485,3 +485,4 @@
     <script src="app/app.js"></script>
   </body>
 </html>
+
