--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon / Tab Image -->
+<link rel="icon" type="image/png" href="img/logo2.png">
+
     <title>TECHPRO INNOVATION</title>
 
     <link
