--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Favicon / Tab Image -->
 <link rel="icon" type="image" href="img/logo2.png">
 
-    <title>TECHPRO INNOVATION</title>
+    <title>TECHPRO INNOcVATION</title>
 
     <link
       rel="stylesheet"
