--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon / Tab Image -->
-<link rel="icon" type="image" href="img/logo2.png">
+<link rel="icon" type="img/logo2.png" sizes="32x32" href="img/favicon-32x32.png">
 
-    <title>TECHPRO INNOcVATION</title>
+    <title>TECHPRO INNOVATION</title>
 
     <link
       rel="stylesheet"
