--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <!-- HERO -->
         <section class="hero fade-section">
           <div class="about-container">
-            <div class="about-left fade-left">
+            <div class="about-left fade-right">
               <h5>TECHPRO INNOVATION</h5>
-              <h2>WE PRO <span>SOLUTION</span></h2>
+              <h2>OUR <span>TECHPRO INNOVATION</span></h2>
               <div id="rotateText" class="rotate-text show">
                 Machine Design & Development
               </div>
@@ -88,11 +88,11 @@
             </div>
 
             <div class="about-right fade-right">
-              <div class="machine-box">
+              <div class="machine-box"style="border-radius: 50px 10px ;">
                 <img
-                  src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc"
+                  src="img/bg.png"
                   alt="Machine"
-                />
+                 />
               </div>
             </div>
           </div>
@@ -122,9 +122,9 @@
 
         <div class="about-container about-container2">
           <div class="about-right fade-right">
-            <div class="machine-box">
+            <div class="machine-box" style="border-radius:50px 10px ;">
               <img
-                src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc"
+                src="img/about.jpg"
                 alt="Machine"
               />
             </div>
@@ -263,7 +263,7 @@
             </div>
 
             <!-- Services Grid -->
-            <div class="grid">
+            <div class="grid" >
               <!-- Service Box 1 -->
               <div class="col-md-6">
                 <div class="service-box">
