--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
               <ul class="footer-links">
                 <li>
                   Email:<a
-                    href="mailto:info@techproinnovation.com"
+                    href="mailto:infotechproinnovation304@gmail.com"
                     class="footer-link"
-                    >info@techproinnovation.com</a
+                    >infotechproinnovation304@gmail.com</a
                   >
                 </li>
                 <li>
@@ -476,7 +476,7 @@
         </div>
 
         <div class="border-top">
-          <p>&copy; 2026 We Pro Solution. All Rights Reserved.</p>
+          <p>&copy; 2026 TECHPRO INNOVATION. All Rights Reserved.</p>
         </div>
       </div>
 
@@ -491,4 +491,5 @@
     <script src="app/app.js"></script>
   </body>
 </html>
+
 
