--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <div class="footer-uppar-fourth">
               <h5>Socials</h5>
               <div class="footer-links social-icons">
-                <a href="#" class="social-link"
+                <a href="https://www.facebook.com/profile.php?id=61586216624740" class="social-link"
                   ><i class="fa-brands fa-facebook-f"></i
                 ></a>
                 <a href="#" class="social-link"
@@ -491,5 +491,6 @@
     <script src="app/app.js"></script>
   </body>
 </html>
+
 
 
