--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <a href="#" class="social-link"
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
-                <a href="https://call.whatsapp.com/video/wIyiVoaNbOTnOJLZixdxzH" class="social-link"
+                <a href="https://WA.me" class="social-link"
                   ><i class="fa-brands fa-whatsapp"></i
                 ></a>
               </div>
@@ -491,6 +491,7 @@
     <script src="app/app.js"></script>
   </body>
 </html>
+
 
 
 
